# ChineseCheckers

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  ChineseCheckers (copy).py  ChineseCheckers.py  ChineseCheckers_AI.py  ChineseCheckers_Areas.py  ChineseCheckers_Board.py  ChineseCheckers_Buttons.py  ChineseCheckers_Players.py  ChineseCheckers_with_lib.py  ChinesecheckersUsingLib.py  Doxyfile  Genetic_plots.py  Makefile  README.md  White_evol.txt  _alpha_beta_8cpp.html  _alpha_beta_8hpp.html  _alpha_beta_8hpp_source.html  _alpha_beta_wrapper_8cpp.html  _c_o_n_t_r_i_b_u_t_i_n_g_8md.html  _chinese_checkers_8cpp.html  _chinese_checkers_8hpp_source.html  _chinese_checkers_wrapper_8cpp.html  _chinese_checkers_wrapper_8hpp.html  _chinese_checkers_wrapper_8hpp_source.html  _types_8hpp.html  _types_8hpp_source.html  annotated.html  class_addon-members.html  class_addon.html  class_chinese_checkers-members.html  class_chinese_checkers.html  class_chinese_checkers_1_1_board.html  class_chinese_checkers_1_1_board_area-members.html  class_chinese_checkers_1_1_i_a.html  class_chinese_checkers_1_1_pion.html  classes.html  dir_59425e443f801f1f2fd8bbe4959a3ccf.html  (+24 more)
doc/html/: _chinese_checkers_8cpp.html  _chinese_checkers_8hpp.html  _chinese_checkers_8hpp_source.html  _chinese_checkers__benchmark_8cpp.html  _chinese_checkers_wrapper_8cpp.html  _chinese_checkers_wrapper_8hpp_source.html  _types_8hpp_source.html  annotated.html  class_addon-members.html  class_addon.html  class_alpha_beta-members.html  class_chinese_checkers-members.html  class_chinese_checkers.html  class_chinese_checkers_1_1_board-members.html  class_chinese_checkers_1_1_board.html  class_chinese_checkers_1_1_board_area.html  class_chinese_checkers_1_1_pion-members.html  class_chinese_checkers_1_1_pion.html  class_chinese_checkers___a_i_1_1_i_a-members.html  classes.html  dir_12e8f9e3870da79dedfc172fd7889359.html  dir_65b24c28d0f232e494405d4f9f0c5236.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_d44c64559bbebec7f509842c48db8b23.html  files.html  functions.html  functions_func.html  functions_vars.html  globals.html  globals_type.html  hierarchy.html  md__r_e_a_d_m_e.html  menudata.js  pages.html  struct_list_of_position_type__to__list-members.html  struct_result__to__int.html  structfrom_python_to_color-members.html  structiterable__converter-members.html  structiterable__converter.html  structvector__of__vector__of__positiontype__to__list-members.html  (+1 more)
html/: _alpha_beta_8cpp.html  _alpha_beta_8cpp.js  _alpha_beta_8cpp_8o_8d.html  _alpha_beta_8dir_2src_2_chinese_checkers_8cpp_8o_8d.html  _alpha_beta_8dir_2src_2_chinese_checkers_wrapper_8cpp_8o_8d.html  _alpha_beta_8hpp.html  _alpha_beta_8hpp.js  _alpha_beta_8hpp_source.html  _alpha_beta__benchmark_8cpp.html  _alpha_beta__benchmark_8cpp.js  _alpha_beta__benchmark_8cpp_8o_8d.html  _alpha_beta_wrapper_8cpp.html  _alpha_beta_wrapper_8cpp_8o_8d.html  _c_make_c_compiler_id_8c.html  _c_make_c_x_x_compiler_id_8cpp.html  _c_o_n_t_r_i_b_u_t_i_n_g_8md.html  _chinese_checkers_8cpp.html  _chinese_checkers_8cpp.js  _chinese_checkers_8cpp_8o_8d.html  _chinese_checkers_8hpp.html  _chinese_checkers_8hpp.js  _chinese_checkers_8hpp_source.html  _chinese_checkers__benchmark_8cpp.html  _chinese_checkers__benchmark_8cpp.js  _chinese_checkers__benchmark_8cpp_8o_8d.html  _chinese_checkers__unittest_8cpp.html  _chinese_checkers__unittest_8cpp.js  _chinese_checkers__unittest_8cpp_8o_8d.html  _chinese_checkers_wrapper_8cpp_8o_8d.html  _chinese_checkers_wrapper_8hpp.html  _chinese_checkers_wrapper_8hpp_source.html  _r_e_a_d_m_e_8md.html  _r_e_p_o_r_t_8md.html  _types_8hpp.html  _types_8hpp.js  _types_8hpp_source.html  annotated.html  annotated_dup.js  class_addon.html  class_alpha_beta-members.html  (+183 more)
icons/: parameters.xcf  scene.odg  states diagram.odg
include/: ChineseCheckers.hpp  ChineseCheckersWrapper.hpp  Types.hpp  intuition_data_generator.hpp  openings_generator.hpp  tournament.hpp
model/: keras_metadata.pb  saved_model.pb
model_save/: keras_metadata.pb  saved_model.pb
objects/: AlphaBeta.cpp.321r.mach  AlphaBeta.cpp.325r.eh_ranges  AlphaBeta.cpp.326r.endbr_and_patchable_area  AlphaBeta.cpp.330r.final  AlphaBeta.cpp.331r.dfinish  AlphaBetaWrapper.cpp.246r.vregs  AlphaBetaWrapper.cpp.247r.into_cfglayout  AlphaBetaWrapper.cpp.249r.subreg1  AlphaBetaWrapper.cpp.250r.dfinit  AlphaBetaWrapper.cpp.260r.reginfo  AlphaBetaWrapper.cpp.261r.loop2  AlphaBetaWrapper.cpp.270r.stv1  AlphaBetaWrapper.cpp.273r.fwprop2  AlphaBetaWrapper.cpp.275r.init-regs  AlphaBetaWrapper.cpp.282r.jump_after_combine  AlphaBetaWrapper.cpp.283r.bbpart  AlphaBetaWrapper.cpp.284r.outof_cfglayout  AlphaBetaWrapper.cpp.285r.split1  AlphaBetaWrapper.cpp.289r.asmcons  AlphaBetaWrapper.cpp.297r.postreload  AlphaBetaWrapper.cpp.298r.gcse2  AlphaBetaWrapper.cpp.299r.split2  AlphaBetaWrapper.cpp.300r.ree  AlphaBetaWrapper.cpp.301r.cmpelim  AlphaBetaWrapper.cpp.304r.csa  AlphaBetaWrapper.cpp.306r.compgotos  AlphaBetaWrapper.cpp.311r.cprop_hardreg  AlphaBetaWrapper.cpp.314r.split3  AlphaBetaWrapper.cpp.317r.stack  AlphaBetaWrapper.cpp.318r.zero_call_used_regs  AlphaBetaWrapper.cpp.321r.mach  AlphaBetaWrapper.cpp.322r.barriers  AlphaBetaWrapper.cpp.325r.eh_ranges  AlphaBetaWrapper.cpp.326r.endbr_and_patchable_area  AlphaBetaWrapper.cpp.327r.shorten  AlphaBetaWrapper.cpp.329r.dwarf2  AlphaBetaWrapper.cpp.331r.dfinish  ChineseCheckers.cpp.245r.expand  ChineseCheckers.cpp.246r.vregs  ChineseCheckers.cpp.247r.into_cfglayout  (+80 more)
search/: all_0.js  all_10.js  all_12.js  all_2.js  all_3.js  all_4.js  all_5.js  all_8.js  all_a.js  all_b.js  all_c.js  all_d.js  classes_0.js  classes_4.js  classes_5.js  classes_6.js  enums_1.js  enums_2.js  enumvalues_3.js  files_1.js  functions_0.js  functions_3.js  functions_4.js  functions_6.js  functions_7.js  functions_a.js  functions_d.js  pages_0.js  searchdata.js  variables_0.js  variables_2.js  variables_5.js
src/: ChineseCheckers.cpp  ChineseCheckersWrapper.cpp  ChineseCheckers_benchmark.cpp  ChineseCheckers_unittest.cpp  intuition_data_generator.cpp  openings_generator.cpp  tournament.cpp
(+133 files in other folders)
